# Odin

./: .dockerignore  .gitignore  Notebook.ipynb  TODO.ipynb  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
apps/core/: models.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_id_company.py
backend/architecture/database/: conventions.md  decisions.md  schema.sql
backend/architecture/flows/: purchasing_flow.md  quotation_flow.md  work_order_flow.md
backend/architecture/flows/core/: authentication_autorization_flow.md
backend/architecture/flows/integrations/: siigo_sync_flow.md
backend/architecture/flows/operations/: inventory_flow.md  production_tracking_flow.md
config/: asgi.py  celery.py  settings.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docker/django/: Dockerfile
